--- a/Sepio-App/backend/.env
+++ b/Sepio-App/backend/.env
@@ -6,3 +6,9 @@ MYSQL_ROOT_PASSWORD=Sepio
 MYSQL_DATABASE=nodejs_login
 MYSQL_USER=Main_user
 MYSQL_PASSWORD=Sepio_password
+SERVICENOW_INSTANCE=ven05878.service-now.com
+SERVICENOW_USERNAME=forRestApi
+SERVICENOW_PASSWORD=934275@Ll
+SEPIO_ENDPOINT=sepio-hac-1-ng.sepiocyber.com
+SEPIO_USERNAME=icloud
+SEPIO_PASSWORD=Changecloud19
