--- a/Sepio-App/backend/package.json
+++ b/Sepio-App/backend/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@prisma/client": "^5.15.0",
     "axios": "^1.7.2",
+    "axios-mock-adapter": "^1.22.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -18,6 +21,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "jest": "^29.7.0",
+    "jest-axios-mock": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.1",
@@ -26,6 +31,7 @@
     "sequelize": "^6.37.3",
     "speakeasy": "^2.0.0",
     "stream-http": "^3.2.0",
+    "supertest": "^7.0.0",
     "winston": "^3.13.0",
     "ws": "^8.17.0"
   },
