--- a/Sepio-App/docker-compose.yml
+++ b/Sepio-App/docker-compose.yml
@@ -18,10 +18,10 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-nodejs_login}
-      MYSQL_USER: ${MYSQL_USER:-Main_user}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-Sepio_password}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
