--- a/Sepio-App/front-end/package.json
+++ b/Sepio-App/front-end/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-history-search": "^0.0.5",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-native-logs": "^5.1.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
