--- a/Sepio-App/front-end/package.json
+++ b/Sepio-App/front-end/package.json
@@ -10,6 +10,8 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.20",
+    "@react-login-page/page6": "^1.0.4",
+    "@react-login-page/page9": "^1.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
