--- a/Sepio-App/front-end/package.json
+++ b/Sepio-App/front-end/package.json
@@ -7,9 +7,9 @@
     "@coreui/react": "^5.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.19",
+    "@mui/icons-material": "^5.15.21",
     "@mui/joy": "^5.0.0-beta.36",
-    "@mui/material": "^5.15.20",
+    "@mui/material": "^5.15.21",
     "@react-login-page/page6": "^1.0.4",
     "@react-login-page/page9": "^1.0.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "flowbite-react": "^0.10.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.6",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-native-logs": "^5.1.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
