--- a/Sepio-App/.env
+++ b/Sepio-App/.env
@@ -1,7 +1,7 @@
 
 JWT_SECRET=your_jwt_secret
 PORT=3000
-DATABASE_URL="mysql://Main_user:Sepio_password@localhost:3306/nodejs_login"
+DATABASE_URL=mysql://Main_user:Sepio_password@localhost:3306/nodejs_login
 MYSQL_ROOT_PASSWORD=Sepio
 MYSQL_DATABASE=nodejs_login
 MYSQL_USER=Main_user
